docs/user/1.0/_sources/cli/apptainer_remote.rst.txt
.. _apptainer_remote:

apptainer remote
----------------

Manage apptainer remote endpoints, keyservers and OCI/Docker registry credentials

Synopsis
~~~~~~~~



  The 'remote' command allows you to manage Apptainer remote endpoints,
  standalone keyservers and OCI/Docker registry credentials through its
  subcommands.

  A 'remote endpoint' is a group of services that is compatible with the
  container library API.  The remote endpoint is a single address,
  e.g. 'cloud.example.com' through which library and/or keystore services
  will be automatically discovered.

  To configure a remote endpoint you must 'remote add' it. You can 'remote login' if
  you will be performing actions needing authentication. Switch between
  configured remote endpoints with the 'remote use' command. The active remote
  endpoint will be used for key operations, and 'library://' pull
  and push. You can also 'remote logout' from and 'remote remove' an endpoint that
  is no longer required.

  To configure credentials for OCI registries that should be used when pulling or
  pushing from/to 'docker://'' or 'oras://' URIs, use the 'remote login' command
  only. You do not have to 'remote add' OCI registries. To remove credentials
  'remote logout' with the same URI. You do not need to 'remote remove' OCI
  credentials.

  The remote configuration is stored in $HOME/.apptainer/remotes.yaml by default.

Examples
~~~~~~~~

::


    All group commands have their own help output:

      $ apptainer help remote list
      $ apptainer remote list

Options
~~~~~~~

::

  -c, --config string   path to the file holding remote endpoint configurations (default "/home/runner/.apptainer/remote.yaml")
  -h, --help            help for remote

SEE ALSO
~~~~~~~~

* :ref:`apptainer <apptainer>` 	 - 
Linux container platform optimized for High Performance Computing (HPC) and
Enterprise Performance Computing (EPC)
* :ref:`apptainer remote add <apptainer_remote_add>` 	 - Add a new apptainer remote endpoint
* :ref:`apptainer remote add-keyserver <apptainer_remote_add-keyserver>` 	 - Add a keyserver (root user only)
* :ref:`apptainer remote list <apptainer_remote_list>` 	 - List all apptainer remote endpoints, keyservers, and OCI credentials that are configured
* :ref:`apptainer remote login <apptainer_remote_login>` 	 - Login to an Apptainer remote endpoint, an OCI/Docker registry or a keyserver using credentials
* :ref:`apptainer remote logout <apptainer_remote_logout>` 	 - Log out from an Apptainer remote endpoint, an OCI/Docker registry or a keyserver
* :ref:`apptainer remote remove <apptainer_remote_remove>` 	 - Remove an existing apptainer remote endpoint
* :ref:`apptainer remote remove-keyserver <apptainer_remote_remove-keyserver>` 	 - Remove a keyserver (root user only)
* :ref:`apptainer remote status <apptainer_remote_status>` 	 - Check the status of the apptainer services at an endpoint, and your authentication token
* :ref:`apptainer remote use <apptainer_remote_use>` 	 - Set an Apptainer remote endpoint to be actively used

*Auto generated by spf13/cobra on 16-Mar-2022*
